--- a/card_scan.html
+++ b/card_scan.html
@@ -17,21 +17,28 @@
       font-weight: bold;
       margin-top: 20px;
     }
+    button {
+      display: block;
+      margin: 10px auto;
+      padding: 10px 20px;
+      font-size: 1em;
+    }
   </style>
 </head>
 <body>
   <h1>リアルタイムOCRとカード枠検出</h1>
   <div id="opencv-status" style="font-weight: bold; margin: 1em;"></div>
   <canvas id="canvasOutput"></canvas>
+  <button id="ocrButton">OCRを開始する</button>
   <div id="ocrResult">認識文字列: <span id="recognizedText">-</span></div>
 
   <script>
     let canvas = document.getElementById('canvasOutput');
     let ctx = canvas.getContext('2d');
     let streaming = false;
-    let isProcessingOCR = false; // OCR処理中フラグ
     let videoWidth = 640; // 初期値
     let videoHeight = 480; // 初期値
+    let video;
 
     function onOpenCvReady() {
       const statusEl = document.getElementById("opencv-status");
@@ -50,7 +57,7 @@
         }
       })
       .then(stream => {
-        const video = document.createElement('video');
+        video = document.createElement('video');
         video.srcObject = stream;
         video.play();
 
@@ -62,7 +69,7 @@
           canvas.height = videoHeight;
 
           streaming = true;
-          processVideo(video);
+          processVideo();
         });
       })
       .catch(err => {
@@ -71,7 +78,7 @@
       });
     }
 
-    function processVideo(video) {
+    function processVideo() {
       if (!streaming) return;
 
       // ビデオフレームをCanvasに描画
@@ -114,18 +121,6 @@
           // 最大輪郭を赤線で描画
           const color = new cv.Scalar(255, 0, 0, 255);
           cv.drawContours(src, contours, -1, color, 2);
-
-          // OCRを非同期で実行
-          if (!isProcessingOCR) {
-            isProcessingOCR = true;
-            const boundingBox = cv.boundingRect(maxContour);
-            const roi = src.roi(boundingBox);
-
-            recognizeText(roi).then(() => {
-              roi.delete(); // メモリ解放
-              isProcessingOCR = false;
-            });
-          }
         }
 
         // 結果をCanvasに描画
@@ -139,8 +134,60 @@
       }
 
       // 次のフレームを処理
-      if (streaming) requestAnimationFrame(() => processVideo(video));
+      if (streaming) requestAnimationFrame(processVideo);
     }
+
+    document.getElementById('ocrButton').addEventListener('click', () => {
+      // OCR処理を開始
+      let src = cv.imread(canvas);
+      let gray = new cv.Mat();
+      let blurred = new cv.Mat();
+      let edges = new cv.Mat();
+
+      try {
+        // グレースケール変換
+        cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
+
+        // ぼかし処理
+        cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
+
+        // エッジ検出
+        cv.Canny(blurred, edges, 50, 150);
+
+        // 輪郭検出
+        let contours = new cv.MatVector();
+        let hierarchy = new cv.Mat();
+        cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
+
+        // 最大面積の輪郭を探す
+        let maxArea = 0;
+        let maxContour = null;
+        for (let i = 0; i < contours.size(); ++i) {
+          let cnt = contours.get(i);
+          let area = cv.contourArea(cnt);
+          if (area > maxArea) {
+            maxArea = area;
+            maxContour = cnt;
+          }
+        }
+
+        if (maxContour) {
+          const boundingBox = cv.boundingRect(maxContour);
+          const roi = src.roi(boundingBox);
+
+          // OCRを非同期で実行
+          recognizeText(roi).then(() => {
+            roi.delete(); // メモリ解放
+          });
+        }
+
+      } catch (error) {
+        console.error("OCR処理中のエラー: ", error);
+      } finally {
+        // メモリ解放
+        src.delete(); gray.delete(); blurred.delete(); edges.delete();
+      }
+    });
 
     async function recognizeText(image) {
       try {
