--- a/card_scan.html
+++ b/card_scan.html
@@ -2,43 +2,27 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>リアルタイムOCRとカード枠検出</title>
+  <title>リアルタイムカード枠検出</title>
   <script async src="https://docs.opencv.org/4.x/opencv.js" onload="onOpenCvReady();"></script>
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.1/dist/tesseract.min.js"></script>
   <style>
-    canvas {
+    video, canvas {
       border: 1px solid black;
       display: block;
       margin: 10px auto;
     }
-    #ocrResult {
-      text-align: center;
-      font-size: 1.2em;
-      font-weight: bold;
-      margin-top: 20px;
-    }
-    button {
-      display: block;
-      margin: 10px auto;
-      padding: 10px 20px;
-      font-size: 1em;
-    }
   </style>
 </head>
 <body>
-  <h1>リアルタイムOCRとカード枠検出</h1>
+  <h1>リアルタイムカード枠検出</h1>
   <div id="opencv-status" style="font-weight: bold; margin: 1em;"></div>
-  <canvas id="canvasOutput"></canvas>
-  <button id="ocrButton">OCRを開始する</button>
-  <div id="ocrResult">認識文字列: <span id="recognizedText">-</span></div>
+  <video id="video" autoplay playsinline width="640" height="480"></video>
+  <canvas id="canvasOutput" width="640" height="480"></canvas>
 
   <script>
+    let video = document.getElementById('video');
     let canvas = document.getElementById('canvasOutput');
     let ctx = canvas.getContext('2d');
     let streaming = false;
-    let videoWidth = 640; // 初期値
-    let videoHeight = 480; // 初期値
-    let video;
 
     function onOpenCvReady() {
       const statusEl = document.getElementById("opencv-status");
@@ -51,31 +35,16 @@
     }
 
     function startCamera() {
-      navigator.mediaDevices.getUserMedia({
-        video: {
-          facingMode: "environment" // 背面カメラを指定
-        }
-      })
-      .then(stream => {
-        video = document.createElement('video');
-        video.srcObject = stream;
-        video.play();
-
-        video.addEventListener('loadedmetadata', () => {
-          // 映像のアスペクト比を取得してCanvasのサイズを調整
-          videoWidth = video.videoWidth;
-          videoHeight = video.videoHeight;
-          canvas.width = videoWidth;
-          canvas.height = videoHeight;
-
+      navigator.mediaDevices.getUserMedia({ video: true })
+        .then(stream => {
+          video.srcObject = stream;
+          video.play();
           streaming = true;
           processVideo();
+        })
+        .catch(err => {
+          console.error("カメラの起動に失敗しました: ", err);
         });
-      })
-      .catch(err => {
-        console.error("カメラの起動に失敗しました: ", err);
-        alert("カメラの起動に失敗しました。デバイスのカメラ権限を確認してください。");
-      });
     }
 
     function processVideo() {
@@ -90,117 +59,51 @@
       let blurred = new cv.Mat();
       let edges = new cv.Mat();
 
-      try {
-        // グレースケール変換
-        cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
+      // グレースケール変換
+      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
 
-        // ぼかし処理
-        cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
+      // ぼかし処理
+      cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
 
-        // エッジ検出
-        cv.Canny(blurred, edges, 50, 150);
+      // エッジ検出
+      cv.Canny(blurred, edges, 50, 150);
 
-        // 輪郭検出
-        let contours = new cv.MatVector();
-        let hierarchy = new cv.Mat();
-        cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
+      // 輪郭検出
+      let contours = new cv.MatVector();
+      let hierarchy = new cv.Mat();
+      cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
 
-        // 最大面積の輪郭を探す
-        let maxArea = 0;
-        let maxContour = null;
-        for (let i = 0; i < contours.size(); ++i) {
-          let cnt = contours.get(i);
-          let area = cv.contourArea(cnt);
-          if (area > maxArea) {
-            maxArea = area;
-            maxContour = cnt;
-          }
+      // 最大面積の輪郭を探す
+      let maxArea = 0;
+      let maxContour = null;
+      for (let i = 0; i < contours.size(); ++i) {
+        let cnt = contours.get(i);
+        let area = cv.contourArea(cnt);
+        if (area > maxArea) {
+          maxArea = area;
+          maxContour = cnt;
         }
-
-        if (maxContour) {
-          // 最大輪郭を赤線で描画
-          const color = new cv.Scalar(255, 0, 0, 255);
-          cv.drawContours(src, contours, -1, color, 2);
-        }
-
-        // 結果をCanvasに描画
-        cv.imshow('canvasOutput', src);
-
-      } catch (error) {
-        console.error("ビデオ処理中のエラー: ", error);
-      } finally {
-        // メモリ解放
-        src.delete(); gray.delete(); blurred.delete(); edges.delete();
       }
+
+      if (maxContour) {
+        // 輪郭を描画
+        let contoursColor = new cv.Scalar(255, 0, 0, 255); // 赤色
+        cv.drawContours(src, contours, -1, contoursColor, 2);
+
+        // 認識成功時の処理
+        console.log("カードが認識されました！");
+        streaming = false; // カメラ処理を停止
+      }
+
+      // 結果をCanvasに描画
+      cv.imshow('canvasOutput', src);
+
+      // メモリ解放
+      src.delete(); gray.delete(); blurred.delete(); edges.delete();
+      contours.delete(); hierarchy.delete();
 
       // 次のフレームを処理
       if (streaming) requestAnimationFrame(processVideo);
-    }
-
-    document.getElementById('ocrButton').addEventListener('click', () => {
-      // OCR処理を開始
-      let src = cv.imread(canvas);
-      let gray = new cv.Mat();
-      let blurred = new cv.Mat();
-      let edges = new cv.Mat();
-
-      try {
-        // グレースケール変換
-        cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
-
-        // ぼかし処理
-        cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
-
-        // エッジ検出
-        cv.Canny(blurred, edges, 50, 150);
-
-        // 輪郭検出
-        let contours = new cv.MatVector();
-        let hierarchy = new cv.Mat();
-        cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
-
-        // 最大面積の輪郭を探す
-        let maxArea = 0;
-        let maxContour = null;
-        for (let i = 0; i < contours.size(); ++i) {
-          let cnt = contours.get(i);
-          let area = cv.contourArea(cnt);
-          if (area > maxArea) {
-            maxArea = area;
-            maxContour = cnt;
-          }
-        }
-
-        if (maxContour) {
-          const boundingBox = cv.boundingRect(maxContour);
-          const roi = src.roi(boundingBox);
-
-          // OCRを非同期で実行
-          recognizeText(roi).then(() => {
-            roi.delete(); // メモリ解放
-          });
-        }
-
-      } catch (error) {
-        console.error("OCR処理中のエラー: ", error);
-      } finally {
-        // メモリ解放
-        src.delete(); gray.delete(); blurred.delete(); edges.delete();
-      }
-    });
-
-    async function recognizeText(image) {
-      try {
-        // Tesseract.jsでOCRを実行
-        const result = await Tesseract.recognize(image.data, 'eng', {
-          logger: info => console.log(info) // ログを表示（デバッグ用）
-        });
-
-        // 認識文字列を更新
-        document.getElementById('recognizedText').innerText = result.data.text.trim();
-      } catch (err) {
-        console.error("OCRエラー:", err);
-      }
     }
   </script>
 </body>
