--- a/card_scan.html
+++ b/card_scan.html
@@ -5,7 +5,7 @@
   <title>リアルタイムカード枠検出と赤線描画（背面カメラ）</title>
   <script async src="https://docs.opencv.org/4.x/opencv.js" onload="onOpenCvReady();"></script>
   <style>
-    video, canvas {
+    canvas {
       border: 1px solid black;
       display: block;
       margin: 10px auto;
@@ -15,13 +15,12 @@
 <body>
   <h1>リアルタイムカード枠検出と赤線描画（背面カメラ）</h1>
   <div id="opencv-status" style="font-weight: bold; margin: 1em;"></div>
-  <video id="video" autoplay playsinline width="640" height="480"></video>
-  <canvas id="canvasOutput" width="640" height="480"></canvas>
+  <canvas id="canvasOutput"></canvas>
 
   <script>
-    let video = document.getElementById('video');
     let canvas = document.getElementById('canvasOutput');
     let ctx = canvas.getContext('2d');
+    let video = null;
     let streaming = false;
 
     function onOpenCvReady() {
@@ -41,10 +40,22 @@
         }
       })
       .then(stream => {
+        video = document.createElement('video'); // 動的にビデオ要素を生成
         video.srcObject = stream;
         video.play();
-        streaming = true;
-        processVideo();
+
+        video.addEventListener('loadedmetadata', () => {
+          // 映像のアスペクト比を取得してCanvasのサイズを調整
+          const videoWidth = video.videoWidth;
+          const videoHeight = video.videoHeight;
+          const scaleFactor = 1.5; // 拡大倍率
+
+          canvas.width = videoWidth * scaleFactor;
+          canvas.height = videoHeight * scaleFactor;
+
+          streaming = true;
+          processVideo();
+        });
       })
       .catch(err => {
         console.error("カメラの起動に失敗しました: ", err);
