--- a/card_scan.html
+++ b/card_scan.html
@@ -45,11 +45,16 @@
         video.play();
 
         video.addEventListener('loadedmetadata', () => {
-          // 映像のアスペクト比を取得してCanvasのサイズを調整
           const videoWidth = video.videoWidth;
           const videoHeight = video.videoHeight;
-          const scaleFactor = 1.5; // 拡大倍率
 
+          if (!videoWidth || !videoHeight) {
+            console.error("カメラからの映像サイズを取得できませんでした。");
+            alert("カメラからの映像サイズを取得できません。デバイスを確認してください。");
+            return;
+          }
+
+          const scaleFactor = 1.5; // 拡大倍率
           canvas.width = videoWidth * scaleFactor;
           canvas.height = videoHeight * scaleFactor;
 
@@ -66,56 +71,48 @@
     function processVideo() {
       if (!streaming) return;
 
-      // ビデオフレームをCanvasに描画
-      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+      try {
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-      // OpenCVで画像処理
-      let src = cv.imread(canvas);
-      let gray = new cv.Mat();
-      let blurred = new cv.Mat();
-      let edges = new cv.Mat();
+        let src = cv.imread(canvas);
+        let gray = new cv.Mat();
+        let blurred = new cv.Mat();
+        let edges = new cv.Mat();
 
-      // グレースケール変換
-      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
+        cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
+        cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
+        cv.Canny(blurred, edges, 50, 150);
 
-      // ぼかし処理
-      cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
+        let contours = new cv.MatVector();
+        let hierarchy = new cv.Mat();
+        cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
 
-      // エッジ検出
-      cv.Canny(blurred, edges, 50, 150);
-
-      // 輪郭検出
-      let contours = new cv.MatVector();
-      let hierarchy = new cv.Mat();
-      cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
-
-      // 最大面積の輪郭を探す
-      let maxArea = 0;
-      let maxContour = null;
-      for (let i = 0; i < contours.size(); ++i) {
-        let cnt = contours.get(i);
-        let area = cv.contourArea(cnt);
-        if (area > maxArea) {
-          maxArea = area;
-          maxContour = cnt;
+        let maxArea = 0;
+        let maxContour = null;
+        for (let i = 0; i < contours.size(); ++i) {
+          let cnt = contours.get(i);
+          let area = cv.contourArea(cnt);
+          if (area > maxArea) {
+            maxArea = area;
+            maxContour = cnt;
+          }
         }
+
+        if (maxContour) {
+          let contoursColor = new cv.Scalar(255, 0, 0, 255); // 赤色
+          cv.drawContours(src, contours, -1, contoursColor, 2);
+        }
+
+        cv.imshow('canvasOutput', src);
+
+        src.delete(); gray.delete(); blurred.delete(); edges.delete();
+        contours.delete(); hierarchy.delete();
+
+      } catch (error) {
+        console.error("Error in processVideo:", error);
+      } finally {
+        if (streaming) requestAnimationFrame(processVideo);
       }
-
-      if (maxContour) {
-        // 赤線で輪郭を描画
-        let contoursColor = new cv.Scalar(255, 0, 0, 255); // 赤色
-        cv.drawContours(src, contours, -1, contoursColor, 2);
-      }
-
-      // 結果をCanvasに描画
-      cv.imshow('canvasOutput', src);
-
-      // メモリ解放
-      src.delete(); gray.delete(); blurred.delete(); edges.delete();
-      contours.delete(); hierarchy.delete();
-
-      // 次のフレームを処理
-      if (streaming) requestAnimationFrame(processVideo);
     }
   </script>
 </body>
